<resources>
    <string name="app_name">ShoppingCart</string>

    <!-- Drawer Items -->
    <string name="drawer_item_compact_header">CompactHeader Drawer</string>
    <string name="drawer_item_action_bar_drawer">ActionBar Drawer</string>
    <string name="drawer_item_multi_drawer">Multi Drawer</string>
    <string name="drawer_item_non_translucent_status_drawer">NonTranslucentStatus Drawer</string>
    <string name="drawer_item_advanced_drawer">Advanced Drawer</string>


    <string name="drawer_item_section_header">Section Header</string>
    <string name="drawer_item_open_source">Open Source</string>
    <string name="drawer_item_contact">Contact</string>
    <string name="settings">Settings</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_add_category">New Category</string>
    <string name="drawer_add_user">Add user</string>
    <string name="cancel">Cancel</string>
    <string name="category_name">Category name</string>
    <string name="save">Save</string>
    <string name="empty_name">Category name is empty</string>
    <string name="item_name">Name of item</string>
    <string name="quantity_name">Qty</string>
    <string name="unit_name">Unit</string>
    <string name="drawer_add_item">Add Item</string>
    <string name="missing_field">You have to fill every field</string>
    <string name="edit_item">Edit item</string>
    <string name="item_deleted">Item was deleted</string>
    <string name="item_deleted_error">Cannot delete item</string>
    <string name="drawer_edit_item">Edit item</string>
    <string name="edit_category">Edit Category</string>
    <string name="select_category">You have to select category</string>
    <string name="drawer_edit_category">Edit category</string>
    <string name="select_img">Select image</string>
    <string name="recovered">Item was recovered</string>
    <string name="category_deleted">Category was deleted</string>
    <string name="downloadXML">Download xml file</string>
    <string name="numShake">Number of shakes</string>
    <string name="pref_shake">Shake settings</string>
    <string name="pref_backup">Backup</string>
    <string name="shakeSensitivity">Sensitivity of shake detection</string>
    <string name="uploadXML">Upload XML</string>
    <string name="img">Image</string>
    <string name="delete_img">Remove icon</string>
    <string name="permission_need">Missing permission for storage</string>

</resources>
