<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/item_name"
        android:textColor="#80000000"
        android:textSize="@dimen/customTitle" />

    <AutoCompleteTextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:inputType="textAutoCorrect"
        android:textColor="#000000"
        android:textSize="@dimen/customEntry" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/quantity_name"
        android:textColor="#80000000"
        android:textSize="@dimen/customTitle" />

    <EditText
        android:id="@+id/qty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:inputType="numberSigned"
        android:textColor="#000000"
        android:textSize="@dimen/customEntry" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/unit_name"
        android:textColor="#80000000"
        android:textSize="@dimen/customTitle" />

    <AutoCompleteTextView
        android:id="@+id/unit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:inputType="textAutoCorrect"
        android:textColor="#000000"
        android:textSize="@dimen/customEntry" />

</LinearLayout>